--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" href="{{ url_for('static', filename = 'css.css') }}">
+        <link rel="stylesheet" href="/static/css.css">
     </head>
     <body>
         <h1>Code-serverManager | Login</h1>
