最最最基础注册逻辑

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Code-serverManager | Login</h1>
         <dev>
-            <form action="/api/login" method="POST">
+            <form action="/login" method="POST">
                 用户名:<input type="text" name="username"><br>
                 密码:<input type="password" name="password"><br>
                 <input type="submit">
