终于研究明白啦！！！

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
                 </form>
             </div>
         </div>
-        <script>
+        <script type="text/javascript">
             form.addEventListener("submit",function(e){
                 var username=document.getElementById('username').value;
                 var pw1=document.getElementById('password').value;
