--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Code-serverManager | Login</title>
         <link rel="stylesheet" href="/static/login.css">
     </head>
     <body>
