管理界面开写！

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/login.css">
     <title>Code-serverManager | Admin</title>
 </head>
 <body>
-    
+    <h1 class="title">Code-serverManager | Admin</h1>
+    <div class="box">
+        <div class="inbox">
+            <form action="/login" method="POST">
+                <p>用户名:</p><input type="text" name="username"><br>
+                <p>密码:</p><input type="password" name="password"><br>
+                <input type="submit" value="登录" class="bt">
+            </form>
+        </div>
+    </div>
+    <script type="text/javascript">
+
+    </script>
 </body>
 </html>
